[gd_scene load_steps=21 format=2]

[ext_resource path="res://Dragon.gd" type="Script" id=1]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1.png" type="Texture" id=2]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_attack_001.png" type="Texture" id=3]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_attack_002.png" type="Texture" id=4]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_attack_003.png" type="Texture" id=5]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_fly_004.png" type="Texture" id=6]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_fly_003.png" type="Texture" id=7]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_fly_001.png" type="Texture" id=8]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_fly_002.png" type="Texture" id=9]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_die_001.png" type="Texture" id=10]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_die_002.png" type="Texture" id=11]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_die_003.png" type="Texture" id=12]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_die_004.png" type="Texture" id=13]
[ext_resource path="res://Characters/Dragon 1/PNG/dragon_1_die_005.png" type="Texture" id=14]
[ext_resource path="res://Font/Russo_One.ttf" type="DynamicFontData" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Stop",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "Die",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 18.2352
height = 32.4131

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 60.7143, 13.6364 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 17.264
height = 33.1478

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
font_data = ExtResource( 15 )

[node name="Dragon" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Fly"
frame = 1
playing = true
flip_h = true

[node name="DragonArea2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragonArea2D"]
position = Vector2( -3.87424, 2.24298 )
rotation = 1.91509
shape = SubResource( 3 )

[node name="FireArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireArea2D"]
position = Vector2( -121, -10 )
rotation = -0.180592
scale = Vector2( 1.4, 3.0267 )
shape = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -4, 2 )
rotation = -1.24006
shape = SubResource( 5 )

[node name="DieTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="LifeLabel" type="Label" parent="."]
margin_left = -39.0
margin_top = -35.0
margin_right = 11.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Lives:  10"
align = 1
valign = 1

[connection signal="area_entered" from="DragonArea2D" to="." method="_on_DragonArea2D_area_entered"]
[connection signal="body_entered" from="FireArea2D" to="." method="_on_FireArea2D_body_entered"]
[connection signal="body_exited" from="FireArea2D" to="." method="_on_FireArea2D_body_exited"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
